# Change Log
All notable changes to this project will be documented in this file.  In the future, this project may adhere to Semantic Versioning.

CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend = Change is not user facing

## [2016-01-16] [Since 2016-01-09 Integration]
### Changed:
- #154: Clinic form now asks users to confirm before deleting location
- #283: Improved results sorting on specialization pages 

### Fixed:
- #251: Quick sharing/unsharing content items from their show page

## [2016-01-09] [Since 2016-01-02 Integration]
### Added:
- Finish CR (#276): Add GP-like suffix labels to Nurse Practitioners (Nurse), Midwives (Midwife), and Internal Medicine (Int Med) specialties in filter table.

### Changed:
- System Notification recipients are now notified if a deceased specialist is deleted from the database.
- Improved css hover effects on front page for: Specialties / Featured Content
- Search box now tells browsers to disable autocomplete
- Security updates

### Fixed:
- #275:  Fixed problem preventing newly retired specialists from showing up in the Latest Specialists and Clinic updates news feed.
- #272: Fixed 'y2k' date bug with CSV Usage Reports that made old months not display correctly when a new year rolls over.
- Fix spacing issues with 'Specialities' dropdown when viewport is narrowed.

## [2016-01-02] [Since 2015-12-26 Integration]
### Changed:
- Change default behaviour for access keys so that sign ups for deactivated accounts do not work, and instead send a message to the person telling them to contact an administrator to reactive their account instead.
- Update tooltips for User index page to allow mouseover for a wider area.
- Update production, test and development deploy scripts to have clearer console outputs.

## [2015-12-26] [Since 2015-12-19 Integration]
### Changed:
- Finish CR: Add a date stamp of when users last visited Pathways to the admin Users table

### Fixed:
- Fix typos in Terms of Use
