@@ -3,9 +3,11 @@ class RemoveDeceasedSpecialistRecords < ServiceObject
     Specialist.deceased.each do |specialist|
       if specialist.version_marked_deceased.created_at < 2.years.ago
         if specialist.destroy
-          SystemNotifier.notice("Deceased Specialist deleted successfully: #{specialist.id} #{specialist.name}")
+          SystemNotifier.info("Deceased Specialist deleted successfully: #{specialist.id} #{specialist.name}")
         else
-          SystemNotifier.notice("ERROR deleting deceased specialist: #{specialist.id} #{specialist.name}")
+          SystemNotifier.error(
+            StandardError.new("ERROR deleting deceased specialist: #{specialist.id} #{specialist.name}")
+          )
         end
       end
     end
