@@ -3,4 +3,5 @@
   %body
     - @body.each do |key, val|
       %h3= "#{key.capitalize}:"
-      %p= val
+      - Array(val).each do |val|
+        %p= val
