@@ -3,6 +3,10 @@ class Hash
     Marshal.load(Marshal.dump(self))
   end
 
+  def except(*keys)
+    dup.except!(*keys)
+  end
+
   def all_values(new_value)
     new_hash = self.dup
 
