@@ -5,10 +5,71 @@ namespace :pathways do
     include Net
     include Rails.application.routes.url_helpers
 
-    task :specializations => :environment do
-      puts "Recaching specializations..."
-      Specialization.all.sort{ |a,b| a.id <=> b.id }.each do |s|
-        begin
+    TASKS = {
+      serialized_indices: -> {
+        Serialized.regenerate_all
+      },
+      specialists_index: -> {
+        Division.all.sort{ |a,b| a.id <=> b.id }.each do |d|
+          Specialization.all.sort{ |a,b| a.id <=> b.id }.each do |s|
+            # true / false represent can_edit? variable in view
+            puts "Specialists Index Specialization #{s.id} Division #{d.id}"
+            expire_fragment "specialists_index_#{s.cache_key}_#{s.specialists.cache_key}_#{d.cache_key}_#{true}"
+            expire_fragment "specialists_index_#{s.cache_key}_#{s.specialists.cache_key}_#{d.cache_key}_#{false}"
+            expire_fragment "specialists_index_no_division_tab_#{s.cache_key}_#{s.specialists.cache_key}"
+            HttpGetter.exec("specialties/#{s.id}/#{s.token}/specialists/refresh_index_cache/#{d.id}")
+          end
+        end
+      },
+      procedures: -> {
+        Procedure.all.sort{ |a,b| a.id <=> b.id }.each do |p|
+          puts "Procedure #{p.id}"
+          expire_fragment procedure_path(p)
+        end
+      },
+      languages: -> {
+        Language.all.sort{ |a,b| a.id <=> b.id }.each do |l|
+          puts "Language #{l.id}"
+          expire_fragment language_path(l)
+          HttpGetter.exec("languages/#{l.id}/#{l.token}/refresh_cache")
+        end
+      },
+      hospitals: -> {
+        Hospital.all.sort{ |a,b| a.id <=> b.id }.each do |h|
+          puts "Hospital #{h.id}"
+          expire_fragment hospital_path(h)
+          HttpGetter.exec("hospitals/#{h.id}/#{h.token}/refresh_cache")
+        end
+      },
+      clinics: -> {
+        Clinic.all.sort{ |a,b| a.id <=> b.id }.each do |c|
+          puts "Clinic #{c.id}"
+          expire_fragment clinic_path(c)
+          HttpGetter.exec("clinics/#{c.id}/#{c.token}/refresh_cache")
+        end
+      },
+      specialists: -> {
+        Specialist.all.sort{ |a,b| a.id <=> b.id }.each do |s|
+          puts "Specialist #{s.id}"
+          expire_fragment specialist_path(s)
+          HttpGetter.exec("specialists/#{s.id}/#{s.token}/refresh_cache")
+        end
+      },
+      sc_categories: -> {
+        User.all_user_division_groups_cached.each do |division_group|
+          ScCategory.all.sort{ |a,b| a.id <=> b.id }.each do |cc|
+            puts "Expiring Content Category #{cc.id} SuperAdmin"
+            expire_fragment "content_#{cc.id}_category_#{division_group.join('_')}_#{true}" #true/false represents @is_super_admin boolean
+            puts "Expiring Content Category #{cc.id} User"
+            expire_fragment "content_#{cc.id}_category_#{division_group.join('_')}_#{false}"
+          end
+        end
+      },
+      specializations: -> {
+        asdf = "hey"
+        asdf.hi
+
+        Specialization.all.sort{ |a,b| a.id <=> b.id }.each do |s|
           puts "Specialization #{s.id}"
 
           City.all.sort{ |a,b| a.id <=> b.id }.each do |c|
@@ -32,182 +93,102 @@ namespace :pathways do
           User.all_user_division_groups_cached.each do |division_group|
             expire_fragment "specialization_#{s.id}_content_divisions_#{division_group.join('_')}"
           end
-        rescue Exception => e
-          puts e.message
-          puts "retrying.."
-          retry
+        end
+      },
+      menus: -> {
+        expire_fragment 'specialization_dropdown_admin'
+
+        User.all_user_division_groups_cached.each do |division_group|
+          expire_fragment "specialization_dropdown_#{division_group.join('_')}"
+
+          Specialization.all.each do |specialization|
+            expire_fragment "specialization_#{specialization.id}_nav_#{division_group.join('_')}"
+          end
+        end
+      },
+      search: -> {
+        GlobalSearchData.new.regenerate_cache
+        SearchDataLabels.new.regenerate_cache
+
+        puts "All entries"
+        expire_fragment "livesearch_all_entries"
+        Specialization.all.each do |s|
+          puts "All entries specialization #{s.id}"
+          expire_fragment "livesearch_all_entries_#{specialization_path(s)}"
+          HttpGetter.exec("refresh_livesearch_all_entries/#{s.id}.js")
+        end
+
+        Division.all.each do |division|
+          puts "Search division #{division.id}"
+          division.search_data.regenerate_cache
+        end
+      },
+      front: -> {
+        User.all_user_division_groups_cached.each do |division_group|
+          expire_fragment "featured_content_#{division_group.join('_')}"
+          expire_fragment "front_#{Specialization.cache_key}_#{division_group.join('_')}"
+          Specialization.all.each do |specialization|
+            expire_fragment "front_#{specialization.cache_key}_#{division_group.join('_')}"
+          end
+        end
+      },
+      latest_updates: -> {
+        User.all_user_division_groups_cached.each do |division_group|
+          LatestUpdates.call(
+            max_automated_events: 5,
+            division_ids: division_group,
+            force: true,
+            force_automatic: true
+          )
+        end
+      },
+      application_layout: -> {
+        expire_fragment("ie_compatibility_warning")
+        User.all_user_division_groups_cached.each do |division_group|
+          expire_fragment("sc_category_global_navbar_#{division_group.join('_')}")
+          expire_fragment("resources_dropdown_categories_#{division_group.join('_')}")
+        end
+      },
+      notifications: -> {
+        PublicActivity::Activity.pluck(:id).each do |id|
+          Rails.cache.delete("views/latest_notifications_for_#{id}")
+        end
+      },
+      analytics_charts: -> {
+        AnalyticsChart.regenerate_all
+      }
+    }
+
+    TASKS.each do |name, body|
+      task name => :environment do
+        begin
+          puts "Recaching #{name}..."
+
+          body.call
+        rescue => e
+          SystemNotifier.error(e, annotation: "In #{name} task")
         end
       end
     end
 
-    task :procedures => :environment do
-      puts "Recaching procedures..."
-      Procedure.all.sort{ |a,b| a.id <=> b.id }.each do |p|
-        puts "Procedure #{p.id}"
-        expire_fragment procedure_path(p)
-      end
-    end
+    task :all => :environment do
+      SystemNotifier.info("Beginning recache")
 
-    task :specialists => :environment do
-      puts "Recaching specialists..."
-      Specialist.all.sort{ |a,b| a.id <=> b.id }.each do |s|
-        puts "Specialist #{s.id}"
-        expire_fragment specialist_path(s)
-        HttpGetter.exec("specialists/#{s.id}/#{s.token}/refresh_cache")
-      end
-    end
+      TASKS.each do |name, body|
+        begin
+          puts "Recaching #{name}..."
 
-    task :specialists_index => :environment do
-      puts "Recaching Specialists Index..."
-      Division.all.sort{ |a,b| a.id <=> b.id }.each do |d|
-        Specialization.all.sort{ |a,b| a.id <=> b.id }.each do |s|
-          # true / false represent can_edit? variable in view
-          puts "Specialists Index Specialization #{s.id} Division #{d.id}"
-          expire_fragment "specialists_index_#{s.cache_key}_#{s.specialists.cache_key}_#{d.cache_key}_#{true}"
-          expire_fragment "specialists_index_#{s.cache_key}_#{s.specialists.cache_key}_#{d.cache_key}_#{false}"
-          expire_fragment "specialists_index_no_division_tab_#{s.cache_key}_#{s.specialists.cache_key}"
-          HttpGetter.exec("specialties/#{s.id}/#{s.token}/specialists/refresh_index_cache/#{d.id}")
+          body.call
+        rescue => e
+          SystemNotifier.error(e, annotation: "In #{name} task")
+
+          next
         end
       end
-    end
 
-    task :clinics => :environment do
-      puts "Recaching clinics..."
-      Clinic.all.sort{ |a,b| a.id <=> b.id }.each do |c|
-        puts "Clinic #{c.id}"
-        expire_fragment clinic_path(c)
-        HttpGetter.exec("clinics/#{c.id}/#{c.token}/refresh_cache")
-      end
-    end
-
-    task :hospitals => :environment do
-      puts "Recaching hospitals..."
-      Hospital.all.sort{ |a,b| a.id <=> b.id }.each do |h|
-        puts "Hospital #{h.id}"
-        expire_fragment hospital_path(h)
-        HttpGetter.exec("hospitals/#{h.id}/#{h.token}/refresh_cache")
-      end
-    end
-
-    task :languages => :environment do
-      puts "Recaching languages..."
-      Language.all.sort{ |a,b| a.id <=> b.id }.each do |l|
-        puts "Language #{l.id}"
-        expire_fragment language_path(l)
-        HttpGetter.exec("languages/#{l.id}/#{l.token}/refresh_cache")
-      end
-    end
-
-    task :search => :environment do
-      puts "Recaching search..."
-
-      GlobalSearchData.new.regenerate_cache
-      SearchDataLabels.new.regenerate_cache
-
-      puts "All entries"
-      expire_fragment "livesearch_all_entries"
-      Specialization.all.each do |s|
-        puts "All entries specialization #{s.id}"
-        expire_fragment "livesearch_all_entries_#{specialization_path(s)}"
-        HttpGetter.exec("refresh_livesearch_all_entries/#{s.id}.js")
-      end
-
-      Division.all.each do |division|
-        puts "Search division #{division.id}"
-        division.search_data.regenerate_cache
-      end
-    end
-
-    task :sc_categories => :environment do
-      puts "Recaching content categories..."
-      User.all_user_division_groups_cached.each do |division_group|
-        ScCategory.all.sort{ |a,b| a.id <=> b.id }.each do |cc|
-          puts "Expiring Content Category #{cc.id} SuperAdmin"
-          expire_fragment "content_#{cc.id}_category_#{division_group.join('_')}_#{true}" #true/false represents @is_super_admin boolean
-          puts "Expiring Content Category #{cc.id} User"
-          expire_fragment "content_#{cc.id}_category_#{division_group.join('_')}_#{false}"
-        end
-      end
-    end
-
-    task :menus => :environment do
-      expire_fragment 'specialization_dropdown_admin'
-
-      User.all_user_division_groups_cached.each do |division_group|
-        expire_fragment "specialization_dropdown_#{division_group.join('_')}"
-
-        Specialization.all.each do |specialization|
-          expire_fragment "specialization_#{specialization.id}_nav_#{division_group.join('_')}"
-        end
-      end
-    end
-
-    task :front => :environment do
-      puts "Expiring Front page..."
-      User.all_user_division_groups_cached.each do |division_group|
-        expire_fragment "featured_content_#{division_group.join('_')}"
-        expire_fragment "front_#{Specialization.cache_key}_#{division_group.join('_')}"
-        Specialization.all.each do |specialization|
-          expire_fragment "front_#{specialization.cache_key}_#{division_group.join('_')}"
-        end
-      end
-    end
-
-    task :latest_updates => :environment do
-      User.all_user_division_groups_cached.each do |division_group|
-        LatestUpdates.call(
-          max_automated_events: 5,
-          division_ids: division_group,
-          force: true,
-          force_automatic: true
-        )
-      end
-    end
-
-    task :notifications => :environment do
-      puts "Expiring Notification view fragments..."
-      PublicActivity::Activity.pluck(:id).each do |id|
-        Rails.cache.delete("views/latest_notifications_for_#{id}")
-      end
-    end
-
-    task :application_layout => :environment do
-      expire_fragment("ie_compatibility_warning")
-      User.all_user_division_groups_cached.each do |division_group|
-        expire_fragment("sc_category_global_navbar_#{division_group.join('_')}")
-        expire_fragment("resources_dropdown_categories_#{division_group.join('_')}")
-      end
-    end
-
-    task :serialized_indices => :environment do
-      Serialized.regenerate_all
-    end
-
-    task :analytics_charts => :environment do
-      AnalyticsChart.regenerate_all
-    end
-
-    #purposeful order from least important to most important, to keep cache 'hot'
-    task :all => [
-      :environment,
-      :serialized_indices,
-      :specialists_index,
-      :procedures,
-      :languages,
-      :hospitals,
-      :clinics,
-      :specialists,
-      :sc_categories,
-      :specializations,
-      :menus,
-      :search,
-      :front,
-      :latest_updates,
-      :application_layout,
-      :notifications
-    ] do
       puts "All pages recached."
-      SystemNotifier.notice("Recache successful")
+
+      SystemNotifier.info("Recache successful")
     end
 
     #utility expiration tasks
